.deploy/k8s/pgadmin4/2.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4-deployment
  template:
    metadata:
      labels:
        app: pgadmin4-deployment
    spec:
      containers:
        - name: pgadmin4-deployment
          image: dpage/pgadmin4:7.4
          ports:
            - containerPort: 80
