.deploy/k8s/pgadmin4/3.service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-services: "pgadmin4-service"
spec:
  selector:
    app: pgadmin4-deployment
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
