.deploy/k8s/pgadmin4/4.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: cert-manager-global
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: pgadmin4.${GODADDY_DOMAIN}
spec:
  tls:
    - hosts:
        - pgadmin4.${GODADDY_DOMAIN}
      secretName: pgadmin4-tls
  rules:
    - host: pgadmin4.${GODADDY_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin4-service
                port:
                  name: http
